--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
   <head>
     <meta charset='utf-8'>
+    <meta name="inmobi-site-verification" content="3dffc87caee3a8d403360f9b60a4061e">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Jekyll demo : hello my blog">
-
+    
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Jekyll demo</title>
