--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset='utf-8'>
+    <meta name="inmobi-site-verification" content="fbf9b86d7aea990228419dd22f79afcb">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Jekyll demo : hello my blog">
 
