--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+  <meta name="inmobi-site-verification" content="bb029cbc53185e63dec3599fe5567401">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="ShineSun&#39;blog : 一个iOS开发者的修真之路">
